force-app/main/default/objects/bpats__Placement_Credit__c/bpats__Placement_Credit__c.object-meta.xml
<CustomObject>
    <label>Placement Credit</label>
    <nameField>
        <label>Placement Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>