force-app/main/default/objects/bpats__Placement_Credit__c/fields/bpats__ATS_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Role_Type__c</fullName>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>bpats__Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>bpats__Placement_Credit_Types</valueSetName>
    </valueSet>
</CustomField>