force-app/main/default/objects/bpats__Placement_Credit__c/fields/bpats__Credit_Recipient__c.field-meta.xml
<CustomField>
    <fullName>bpats__Credit_Recipient__c</fullName>
    <formula>IF(CONTAINS(TEXT(bpats__ATS_Role_Type__c) ,&apos;User&apos; ), bpats__User__r.FirstName &amp; &quot; &quot; &amp; bpats__User__r.LastName , IF(ISPICKVAL(bpats__ATS_Role_Type__c , &apos;Branch&apos;), bpats__ATS_Branch_Receiving_Credit__c , IF(ISPICKVAL(bpats__ATS_Role_Type__c ,&apos;House&apos; ), &apos;House&apos;, null)))</formula>
    <label>Credit Recipient</label>
    <type>Text</type>
</CustomField>