force-app/main/default/objects/bpats__Placement_Credit__c/fields/bpats__Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>bpats__Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Override</label>
    <type>Checkbox</type>
</CustomField>