force-app/main/default/objects/bpats__Placement_Credit__c/fields/bpats__Placement__c.field-meta.xml
<CustomField>
    <fullName>bpats__Placement__c</fullName>
    <label>Placement</label>
    <referenceTo>bpats__Placement__c</referenceTo>
    <relationshipLabel>Placement Credits</relationshipLabel>
    <relationshipName>Placement_Credits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>