force-app/main/default/objects/bpats__Placement_Credit__c/fields/bpats__Placement_Credit_Template_Entry__c.field-meta.xml
<CustomField>
    <fullName>bpats__Placement_Credit_Template_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Credit Template Entry</label>
    <referenceTo>bpats__Placement_Credit_Template_Entry__c</referenceTo>
    <relationshipLabel>Placement Credits</relationshipLabel>
    <relationshipName>Placement_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>