force-app/main/default/objects/bpats__Placement_Credit__c/fields/bpats__Profit_Amount__c.field-meta.xml
<CustomField>
    <fullName>bpats__Profit_Amount__c</fullName>
    <label>Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>