force-app/main/default/objects/bpats__Placement_Credit__c/fields/bpats__Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>bpats__Total_Credits__c</fullName>
    <formula>IF(ISBLANK(bpats__Profit_Amount__c), bpats__Revenue_Amount__c, IF(ISBLANK(bpats__Revenue_Amount__c), bpats__Profit_Amount__c, bpats__Profit_Amount__c + bpats__Revenue_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>