force-app/main/default/objects/bpats__Placement_Credit__c/fields/bpats__User__c.field-meta.xml
<CustomField>
    <fullName>bpats__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Placement_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>