force-app/main/default/objects/bpats__Placement_Credit__c/fields/Timesheet_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Timesheet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Timesheet</label>
    <referenceTo>ASYMBL_Time__Timesheet__c</referenceTo>
    <relationshipLabel>Placement Credit Timesheets</relationshipLabel>
    <relationshipName>Placement_Credit_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>